<resources>
    <string name="app_name">Attendence Management2</string>
    <string-array name="logintype">
        <item>Select Login Type</item>
        <item>Admin</item>
        <item>Teacher</item>
        <item>Student</item>

    </string-array>
    <string name="title_activity_admin_2">Admin_Activity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_student">Student</string>
    <string name="menu_teacher">Teacher</string>
    <string name="menu_course">Course</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
</resources>