<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_student"
            android:icon="@drawable/student"
            android:title="@string/menu_student" />
        <item
            android:id="@+id/nav_teacher"
            android:icon="@drawable/teacher"
            android:title="@string/menu_teacher" />
        <item
            android:id="@+id/nav_course"
            android:icon="@drawable/course"
            android:title="@string/menu_course" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/attendence"
            android:title="@string/menu_attendance" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings" />
    </group>
</menu>